--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,4 @@ theme: jekyll-theme-cayman
 title: 코딩알지
 description: 프로그래밍 관련 정보 안내
 show_downloads: false
-github:
-  repository_url: https://github.com/codingalzi/codingalzi.github.io
+github: true
