--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: 코딩알지
-description: 프로그래밍 강의노트 모음집
+description: 프로그래밍 강의 자료 모음집
 show_downloads: false
 github:
   is_project_page: false
